test/negative/t16.mli.expected

*******************************
********** Parsed file ********
*******************************
val f : x:int -> int -> int[@@gospel {| r = f x y|}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Stdlib *)

(*@ open Gospelstdlib *)

val f : x:int -> int -> int
(*@ r = f x y
     *)
File "t16.mli", line 12, characters 7-8:
Error: Type checking error: parameter do not match with val type.
